# kira-bam

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  types.rs
src/addreplacerg/: mod.rs
src/ampliconclip/: mod.rs
src/ampliconstats/: mod.rs
src/bedcov/: mod.rs
src/calmd/: mod.rs
src/cat/: mod.rs
src/cli/: mod.rs
src/cli/args/: addreplacerg.rs  ampliconclip.rs  ampliconstats.rs  bedcov.rs  calmd.rs  cat.rs  collate.rs  consensus.rs  coverage.rs  depth.rs  dict.rs  faidx.rs  fastq.rs  fixmate.rs  flagstat.rs  fqidx.rs  head.rs  idxstats.rs  import.rs  index.rs  markdup.rs  merge.rs  mod.rs  mpileup.rs  quickcheck.rs  reheader.rs  samples.rs  sort.rs  split.rs  stats.rs  tview.rs  view.rs
src/cli/commands/: addreplacerg.rs  ampliconclip.rs  ampliconstats.rs  bedcov.rs  calmd.rs  cat.rs  collate.rs  consensus.rs  coverage.rs  depth.rs  dict.rs  faidx.rs  fastq.rs  fixmate.rs  flagstat.rs  fqidx.rs  head.rs  idxstats.rs  import.rs  index.rs  markdup.rs  merge.rs  mod.rs  mpileup.rs  quickcheck.rs  reheader.rs  samples.rs  sort.rs  split.rs  stats.rs  tview.rs  view.rs
src/collate/: mod.rs
src/consensus/: mod.rs
src/coverage/: mod.rs
src/depth/: mod.rs
src/dict/: mod.rs
src/faidx/: mod.rs
src/fastq/: mod.rs
src/fixmate/: mod.rs
src/flagstat/: mod.rs
src/fqidx/: mod.rs
src/head/: mod.rs
src/idxstats/: mod.rs
src/import/: mod.rs
src/index/: mod.rs
src/io/: mod.rs
src/markdup/: mod.rs
src/merge/: mod.rs
src/mpileup/: mod.rs
src/pileup/: mod.rs
src/quickcheck/: mod.rs
src/reheader/: mod.rs
src/samples/: mod.rs
src/sort/: mod.rs
src/split/: mod.rs
src/stats/: mod.rs
src/tview/: mod.rs
src/view/: mod.rs
tests/: golden.rs
